--- a/module_5/index.html
+++ b/module_5/index.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -34,17 +34,20 @@
                             </div>
                             <label for="gender">Gender</label>
                             <div class="form-check-inline">
-                                <input type="radio" class="form-check-input" id="male" name="optradio" value="male" checked>Male
+                                <input type="radio" class="form-check-input" id="male" name="optradio" value="male"
+                                    checked>Male
                                 <label class="form-check-label" for="male"></label>
-                              </div>
-                              <div class="form-check-inline">
-                                <input type="radio" class="form-check-input" id="female" name="optradio" value="female">Female
+                            </div>
+                            <div class="form-check-inline">
+                                <input type="radio" class="form-check-input" id="female" name="optradio"
+                                    value="female">Female
                                 <label class="form-check-label" for="female"></label>
-                              </div>
-                              <div class="form-check-inline">
-                                <input type="radio" class="form-check-input" id="other" name="optradio" value="other">Prefer not to say
+                            </div>
+                            <div class="form-check-inline">
+                                <input type="radio" class="form-check-input" id="other" name="optradio"
+                                    value="other">Prefer not to say
                                 <label class="form-check-label" for="other"></label>
-                              </div>
+                            </div>
                         </form>
                     </div>
                 </div>
