--- a/module_5/index.html
+++ b/module_5/index.html
@@ -1,71 +1,100 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
-    <div class="container">
+    <div class="container" id="device-request-form-container">
         <div class="row">
             <div class="col">
                 <h3>e-NABLE Form</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
                 <div id="google_translate_element"></div>
-                <div class="card mt-3">
-                    <div class="card-header">
-                        <i class="bi bi-person-fill"></i>
-                        RECIPIENT
-                    </div>
-                    <div class="card-body p-3">
-                        <form>
-                            <div class="form-group">
-                                <label for="firstName">First Name</label>
-                                <input type="text" class="form-control" id="firstName">
-                            </div>
-                            <div class="form-group">
-                                <label for="lastName">Last Name</label>
-                                <input type="text" class="form-control" id="lastName">
-                            </div>
-                            <div class="form-group">
-                                <label for="age">Age</label>
-                                <input type="number" class="form-control" id="age">
-                            </div>
-                            <label for="gender">Gender</label>
-                            <div class="form-check-inline">
-                                <input type="radio" class="form-check-input" id="male" name="optradio" value="male"
-                                    checked>Male
-                                <label class="form-check-label" for="male"></label>
-                            </div>
-                            <div class="form-check-inline">
-                                <input type="radio" class="form-check-input" id="female" name="optradio"
-                                    value="female">Female
-                                <label class="form-check-label" for="female"></label>
-                            </div>
-                            <div class="form-check-inline">
-                                <input type="radio" class="form-check-input" id="other" name="optradio"
-                                    value="other">Prefer not to say
-                                <label class="form-check-label" for="other"></label>
-                            </div>
-                        </form>
-                    </div>
+            </div>
+        </div>
+        <div class="form-section">
+            <div class="card mt-3">
+                <div class="card-header">
+                    <i class="bi bi-person-fill"></i>
+                    RECIPIENT
                 </div>
-                <div class="card mt-3">
-                    <div class="card-header">
-                        <i class="bi bi-folder-fill"></i>
-                        CASE
-                    </div>
+                <div class="card-body p-3">
+                    <form>
+                        <div class="row">
+                            <div class="col-md-5 col-sm-12">
+                                <div class="form-group">
+                                    <label for="firstName">First Name</label>
+                                    <input type="text" class="form-control" id="firstName">
+                                </div>
+                            </div>
+                            <div class="col-md-5 col-sm-12">
+                                <div class="form-group">
+                                    <label for="lastName">Last Name</label>
+                                    <input type="text" class="form-control" id="lastName">
+                                </div>
+                            </div>
+                            <div class="col-md-2 col-sm-12">
+                                <div class="form-group">
+                                    <label for="age">Age</label>
+                                    <input type="number" class="form-control" id="age">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">Gender</div>
+                            <div class="col-12">
+                                <div class="form-check-inline">
+                                    <input type="radio" class="form-check-input" id="male" name="optradio" value="male"
+                                        checked>Male
+                                    <label class="form-check-label" for="male"></label>
+                                </div>
+                                <div class="form-check-inline">
+                                    <input type="radio" class="form-check-input" id="female" name="optradio"
+                                        value="female">Female
+                                    <label class="form-check-label" for="female"></label>
+                                </div>
+                                <div class="form-check-inline">
+                                    <input type="radio" class="form-check-input" id="other" name="optradio"
+                                        value="other">Prefer
+                                    not
+                                    to say
+                                    <label class="form-check-label" for="other"></label>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
                 </div>
-                <div class="card mt-3">
-                    <div class="card-header">
-                        <i class="bi bi-gear-fill"></i>
-                        DEVICE
-                    </div>
+            </div>
+
+        </div>
+        <div class="form-section">
+            <div class="card mt-3">
+                <div class="card-header">
+                    <i class="bi bi-folder-fill"></i>
+                    CASE
                 </div>
-                <div class="d-flex justify-content-end mt-2">
-                    <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+        </div>
+        <div class="form-section">
+            <div class="card mt-3">
+                <div class="card-header">
+                    <i class="bi bi-gear-fill"></i>
+                    DEVICE
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col d-flex justify-content-end mt-2">
+                <button type="submit" class="btn btn-primary">Submit</button>
             </div>
         </div>
     </div>
